// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`directives remark plugin - client compiler > default behavior for container directives > console 1`] = `
[
  [
    "[WARNING] Docusaurus found 1 unused Markdown directives in file "packages/docusaurus-mdx-loader/src/remark/unusedDirectives/__tests__/__fixtures__/containerDirectives.md"
- :::unusedDirective (7:1)
Your content might render in an unexpected way. Visit https://github.com/facebook/docusaurus/pull/9394 to find out why and how to fix it.",
  ],
]
`;

exports[`directives remark plugin - client compiler > default behavior for container directives > result 1`] = `
"<Admonition type="danger">
  Take care of snowstorms...
</Admonition>

:::unusedDirective
unused directive content
:::

/:::NotAContainerDirective with a phrase after

/:::

Phrase before :::NotAContainerDirective

/:::
"
`;

exports[`directives remark plugin - client compiler > default behavior for leaf directives > console 1`] = `
[
  [
    "[WARNING] Docusaurus found 1 unused Markdown directives in file "packages/docusaurus-mdx-loader/src/remark/unusedDirectives/__tests__/__fixtures__/leafDirectives.md"
- ::unusedLeafDirective (1:1)
Your content might render in an unexpected way. Visit https://github.com/facebook/docusaurus/pull/9394 to find out why and how to fix it.",
  ],
]
`;

exports[`directives remark plugin - client compiler > default behavior for leaf directives > result 1`] = `
"::unusedLeafDirective

Leaf directive in a phrase ::NotALeafDirective

/::NotALeafDirective with a phrase after
"
`;

exports[`directives remark plugin - client compiler > default behavior for text directives > console 1`] = `
[
  [
    "[WARNING] Docusaurus found 2 unused Markdown directives in file "packages/docusaurus-mdx-loader/src/remark/unusedDirectives/__tests__/__fixtures__/textDirectives.md"
- :textDirective3 (9:7)
- :textDirective4 (11:7)
Your content might render in an unexpected way. Visit https://github.com/facebook/docusaurus/pull/9394 to find out why and how to fix it.",
  ],
]
`;

exports[`directives remark plugin - client compiler > default behavior for text directives > result 1`] = `
"Simple: textDirective1

\`\`\`sh
Simple: textDirectiveCode
\`\`\`

Simple/:textDirective2

Simple:textDirective3[label]

Simple:textDirective4{age="42"}

Simple/:textDirective5

\`\`\`sh
Simple:textDirectiveCode
\`\`\`
"
`;

exports[`directives remark plugin - client compiler > onUnusedMarkdownDirectives > function form > if file contains unused container directive > result 1`] = `
"<Admonition type="danger">
  Take care of snowstorms...
</Admonition>

:::fixed-unusedDirective
:::

/:::NotAContainerDirective with a phrase after

/:::

Phrase before :::NotAContainerDirective

/:::
"
`;

exports[`directives remark plugin - client compiler > onUnusedMarkdownDirectives > function form > if file contains unused leaf directive > result 1`] = `
"::fixed-unusedLeafDirective

Leaf directive in a phrase ::NotALeafDirective

/::NotALeafDirective with a phrase after
"
`;

exports[`directives remark plugin - client compiler > onUnusedMarkdownDirectives > function form > if file contains unused text directive > result 1`] = `
"Simple: textDirective1

\`\`\`sh
Simple: textDirectiveCode
\`\`\`

Simple/:textDirective2

Simple:fixed-textDirective3

Simple:fixed-textDirective4{age="42"}

Simple/:textDirective5

\`\`\`sh
Simple:textDirectiveCode
\`\`\`
"
`;

exports[`directives remark plugin - client compiler > onUnusedMarkdownDirectives > ignore > if file contains unused container directive > result 1`] = `
"<Admonition type="danger">
  Take care of snowstorms...
</Admonition>

:::unusedDirective
unused directive content
:::

/:::NotAContainerDirective with a phrase after

/:::

Phrase before :::NotAContainerDirective

/:::
"
`;

exports[`directives remark plugin - client compiler > onUnusedMarkdownDirectives > ignore > if file contains unused leaf directive > result 1`] = `
"::unusedLeafDirective

Leaf directive in a phrase ::NotALeafDirective

/::NotALeafDirective with a phrase after
"
`;

exports[`directives remark plugin - client compiler > onUnusedMarkdownDirectives > ignore > if file contains unused text directive > result 1`] = `
"Simple: textDirective1

\`\`\`sh
Simple: textDirectiveCode
\`\`\`

Simple/:textDirective2

Simple:textDirective3[label]

Simple:textDirective4{age="42"}

Simple/:textDirective5

\`\`\`sh
Simple:textDirectiveCode
\`\`\`
"
`;

exports[`directives remark plugin - server compiler > default behavior for container directives > result 1`] = `
"<Admonition type="danger">
  Take care of snowstorms...
</Admonition>

:::unusedDirective
unused directive content
:::

/:::NotAContainerDirective with a phrase after

/:::

Phrase before :::NotAContainerDirective

/:::
"
`;

exports[`directives remark plugin - server compiler > default behavior for leaf directives > result 1`] = `
"::unusedLeafDirective

Leaf directive in a phrase ::NotALeafDirective

/::NotALeafDirective with a phrase after
"
`;

exports[`directives remark plugin - server compiler > default behavior for text directives > result 1`] = `
"Simple: textDirective1

\`\`\`sh
Simple: textDirectiveCode
\`\`\`

Simple/:textDirective2

Simple:textDirective3[label]

Simple:textDirective4{age="42"}

Simple/:textDirective5

\`\`\`sh
Simple:textDirectiveCode
\`\`\`
"
`;
